--- a/public/css/apps.css
+++ b/public/css/apps.css
@@ -106,6 +106,11 @@
     font-size: 0.75rem;
 }
 
+.app-header-row{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .app-buttons{
     position: absolute;
     bottom: 10px;
